# hafizhrepo

./: main  main.cpp  try  try.cpp  try2  try2.cpp
devel/: .catkin  local_setup.sh
devel/include/controller/: PWM.h
devel/include/fukuro_common/: Angle.h  Ball.h  Communication.h  CommunicationService.h  CommunicationServiceRequest.h  CommunicationServiceResponse.h  Compass.h  DribblerControl.h  Encoder.h  HWController.h  HWControllerAutotuning.h  HWControllerAutotuningRequest.h  HWControllerAutotuningResponse.h  HWControllerCommand.h  HWControllerManual.h  HWControllerPIParam.h  HWControllerPIParamRequest.h  HWControllerPIParamResponse.h  HWControllerParam.h  HWControllerParamRequest.h  HWControllerParamResponse.h  HWControllerSrv.h  HWControllerSrvRequest.h  HWControllerSrvResponse.h  Localization.h  LocalizationSrv.h  LocalizationSrvRequest.h  LocalizationSrvResponse.h  MotorParameter.h  MotorVel.h  Obstacle.h  Obstacles.h  ObstaclesService.h  ObstaclesServiceRequest.h  ObstaclesServiceResponse.h  OdometryCalibration.h  OdometryCalibrationRequest.h  OdometryCalibrationResponse.h  OdometryInfo.h  OdometryService.h  (+38 more)
devel/lib/controller/: high_level_controller  low_level_controller  robot_controller
devel/lib/magangros/: publisher_node  subscriber_node
devel/lib/pkgconfig/: controller.pc  fukuro_common.pc  magangros.pc
devel/share/controller/cmake/: controller-msg-extras.cmake  controller-msg-paths.cmake  controllerConfig.cmake
devel/share/fukuro_common/cmake/: fukuro_common-msg-extras.cmake  fukuro_common-msg-paths.cmake  fukuro_commonConfig.cmake
src/controller/: CMakeLists.txt  package.xml
src/controller/launch/: controller.launch  serial.launch
src/controller/src/: high_level.cpp  low_level.cpp  magang2.code-workspace  test.cpp
src/fukuro_common/: CMakeLists.txt
src/magangros/: CMakeLists.txt  package.xml  publisher.cpp  robot_control.cpp  subscriber.cpp
(+257 files in other folders)
